# forex-netting

./: README.md  pyproject.toml
forex_netting/: __init__.py  calendar.py  netting.py  reconciliation.py  settlement.py  trade.py
tests/: test_calendar.py  test_netting.py  test_settlement.py  test_trade.py
